RESOLVED FIXED170719
REGRESSION(r215153): Request Animation Frame broken when building without REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR
https://bugs.webkit.org/show_bug.cgi?id=170719
Summary REGRESSION(r215153): Request Animation Frame broken when building without REQ...
Carlos Garcia Campos
Reported 2017-04-11 01:26:02 PDT
This is because when not using the display refresh monitor, the timer is always used, not only when throttling, but since r215153 the rAF timer is always aligned to 30ms. This made test fast/animation/request-animation-frame-too-rapid.html fail in the GTK+ port.
Attachments
Patch (2.79 KB, patch)
2017-04-11 01:34 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2017-04-11 01:34:48 PDT
Simon Fraser (smfr)
Comment 2 2017-04-11 05:56:37 PDT
Comment on attachment 306787 [details] Patch Thanks for fixing! I guess the gtk EWS bot doesn't run tests?
Carlos Garcia Campos
Comment 3 2017-04-11 06:03:26 PDT
(In reply to Simon Fraser (smfr) from comment #2) > Comment on attachment 306787 [details] > Patch > > Thanks for fixing! I guess the gtk EWS bot doesn't run tests? Yes :-(
WebKit Commit Bot
Comment 4 2017-04-11 08:52:01 PDT
Comment on attachment 306787 [details] Patch Clearing flags on attachment: 306787 Committed r215231: <http://trac.webkit.org/changeset/215231>
WebKit Commit Bot
Comment 5 2017-04-11 08:52:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.