REGRESSION(r215153): Request Animation Frame broken when building without REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR https://bugs.webkit.org/show_bug.cgi?id=170719

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2017-04-11
Reviewed by Žan Doberšek.

This is because when not using the display refresh monitor, the timer is always used, not only when throttling,
but since r215153 the rAF timer is always aligned to 30ms.

Fixes: fast/animation/request-animation-frame-too-rapid.html

* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::scheduleAnimation): Only do the timer alignment when throttling.

Canonical link: https://commits.webkit.org/187657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215231 268f45cc-cd09-0410-ab3c-d52691b4dbfc